# fract-ol

./: CMakeLists.txt  HELENE.c  Makefile  README.md  colorizer.c  error_manager.c  fract-ol.c  fract-ol.h  fractal_checker.c  fractal_creater.c  fractol  main.c  window.c
color_range_shifter/: blue_shifter.c  green_shifter.c  hex_rgb_converters.c  red_shifter.c
colorizer/: burning_ship_colorizer.c  colorize_mandelbrot.c  colorizer.c  effects.c  julia_colorizer.c  mandelbrot_colorizer.c
colorizer/images/: fractal_images.c  image_updater.c
fractals/: burning_ship.c  fractal_creater.c  fractal_printer.c  julia.c  mandelbrot.c
fractals/presets/: mandelbrot_psychedelic.c  mandelbrot_standard.c  presets_printer.c
hooks_and_events/: hooks_checker.c  image_updater.c  key_hooks.c  mouse_hooks.c  vert_horiz_mover.c  zoomer.c
incl/: colors.h  gui.h
includes/: bonus.h  colors.h  error_flags.h  errors.h  fractol.h  gui.h  hooks.h  key_hooks.h  structs.h  window.h
initializers/: fractol_initializers.c  mods_initializer.c
initializers/color_initializers/: color_initializer.c  inside_color_initializer.c  outline_color_initializer.c  outside_color_initializer.c
io_controller/: error_printer.c  info_printer.c  input_checker.c  input_checkers.c  valid_param_printer.c
key_hooks/: window_hooks.c
lib/ft_printf/: Makefile  ft_print_uint.c  ft_printf.h  ft_printhex.c  ft_printptr.c
lib/minilibx/: mlx.h
libs/ft_printf/: ft_check_mods.c  ft_parse_convert.c  ft_printchar.c  ft_printf.c  (+3 more)
tools/: ft_atof.c  ft_atoi.c  ft_strcmp.c  ft_strlen.c  ft_strncmp.c  memory_freer.c
(+83 files in other folders)
